<resources>

    <string-array name="sex">
        <item> </item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="size">
        <item> </item>
        <item>Exhibition</item>
        <item>King Size</item>
        <item>Under Sized</item>
        <item>Good Size</item>
        <item>Local Exhibition</item>
        <item>Normal</item>
    </string-array>

    <string-array name="crested">
        <item> </item>
        <item>Single Crust</item>
        <item>Double Crust</item>
        <item>Triple Crust</item>
        <item>Tufted</item>
        <item>Tufted Back Crusted</item>
        <item>Back Frill</item>
        <item>Disturbed Single</item>
        <item>Disturbed Double</item>
        <item>Slight Disturbance</item>
        <item>Crust Bred</item>
    </string-array>

    <string-array name="mutation">
        <item>Normal</item>
        <item>Spangle</item>
        <item>Dominant pied</item>
        <item>Recessive pied</item>
        <item>Clear Flight pied</item>
        <item>English Fallow</item>
        <item>German fallow</item>
        <item>Ino</item>
        <item>TCB</item>
        <item>Cinammon</item>
        <item>Opaline</item>
        <item>Clearwing</item>
        <item>Greywing</item>
        <item>Dilute</item>
        <item>Yellowface_Type_I</item>
        <item>Yellowface Type II</item>
        <item>Goldenface</item>
        <item>Anthracite</item>
        <item>Blackwings</item>
        <item>Crested</item>
        <item>Hogo</item>
        <item>ECB</item>
    </string-array>

    <string name="app_name">The Budgie Book</string>
    <string name="hello">Hello</string>
    <string name="sign_into_your_account">Sign into your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <u>Register Now</u></string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="or_register_using_social_media">Or Register using social media</string>
    <string name="or_login_using_social_media">Or Login using social media</string>
    <string name="already_have_an_account_login">Already have an account? <u>Login</u></string>
    <string name="register_now">Register Now</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="loading">Loading...</string>
    <string name="birds">Birds</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Us</string>
    <string name="add_new_bird">Add New Bird</string>
    <string name="ring_number">Ring number</string>
    <string name="sex">Sex</string>
    <string name="size">Size</string>
    <string name="hatch_date">Hatch Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="color">Color</string>
    <string name="approx_age">Approx Age</string>
    <string name="crested">Crested</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="status">Status</string>
    <string name="cage_number">Cage Number</string>
    <string name="ring_owner_name">Ring Owner Name</string>
    <string name="purchased_price">Purchased Price</string>
    <string name="taken_from">Taken From</string>
    <string name="taken_date">Taken Date</string>
    <string name="seller_number">Seller Number</string>
    <string name="seller_location">Seller Location</string>
    <string name="selling_price">Selling Price</string>
    <string name="given_to">Given To</string>
    <string name="given_date">Given Date</string>
    <string name="buyer_number">Buyer Number</string>
    <string name="buyer_location">Buyer Location</string>
    <string name="with_partnership">With Partnership</string>
    <string name="mutation">Mutation</string>
    <string name="bird_details">Bird Details</string>
    <string name="country">Country</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search_hint">Search app</string>
    <string name="search_by_ring_num">Search by Ring Number</string>
    <string name="no_birds_found">No Birds Found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="resend_code">Didn\'t received any code? Resend Code!</string>
    <string name="edit_bird">Edit Bird</string>
</resources>
