<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/my_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about_us" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/rate"
                android:icon="@drawable/rate"
                android:title="Rate Us" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/share"
                android:title="Share" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="Logout" />
        </menu>
    </item>


</menu>