<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.LoginActivity">

            <ImageView
                android:id="@+id/loginImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/login_logo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/loginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginImage"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/loginLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/greetHeadLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hello"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/greetBodyLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_into_your_account" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgotPasswordLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="20dp"
                        android:text="@string/forgot_your_password" />

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/round"
                        android:text="@string/login"
                        android:textAllCaps="false" />

                    <TextView
                        android:id="@+id/loginOptionLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/or_login_using_social_media" />

                    <LinearLayout
                        android:id="@+id/socialLoginLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/facebookLogin"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="30dp"
                            android:src="@drawable/facebook" />

                        <ImageView
                            android:id="@+id/twitterLogin"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="30dp"
                            android:src="@drawable/twitter" />

                        <ImageView
                            android:id="@+id/GoogleLogin"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/google_plus" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/registerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginCard"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:text="@string/don_t_have_an_account_register_now"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>