<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.LoginActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/upload" />

        <androidx.cardview.widget.CardView
            android:id="@+id/registerCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImage"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/registerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/greetBodyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_account"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    app:counterEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password2InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password2Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/countryInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/countryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tagLineInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tagLineText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Tag Line"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/round"
                    android:text="@string/register_now"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/loginOptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/or_register_using_social_media" />

                <LinearLayout
                    android:id="@+id/socialLoginLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/facebookLogin"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/twitterLogin"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/twitter" />

                    <ImageView
                        android:id="@+id/GoogleLogin"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/google_plus" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>